--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <body>
     <h1>Govind G Krishnan's Web Dev Portfolio</h1>
     <h2>Project-1</h2>
-    <a href="../webd1.html">About Me</a>
+    <a href="./webd1.html">About Me</a>
     <br>
     <img src="./public/portfolio.jpg" height="200">
 
     <h2>Project-2 </h2>
-    <a href="../contact.html">Contact Me</a>
+    <a href="./contact.html">Contact Me</a>
     <br>
     <img src="./public/Contact .jpg" height="200">
 
     <h2>Project-3</h2>
-    <a href="../anime_rating.html">Anime rating Website</a>
+    <a href="./anime_rating.html">Anime rating Website</a>
     <br>
     <img src="./public/Anime.jpg" height="200">
 
